--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.1.1"
   },
   "eslintConfig": {
     "root": true,
